--- a/business-center/classs-center/pom.xml
+++ b/business-center/classs-center/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>classs-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>business-center</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     
 </project>
