--- a/business-center/classroom-center/pom.xml
+++ b/business-center/classroom-center/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>classroom-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>business-center</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
+
 </project>
