--- a/business-center/college-center/pom.xml
+++ b/business-center/college-center/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>college-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>business-center</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 </project>
