--- a/db-center/pom.xml
+++ b/db-center/pom.xml
@@ -8,5 +8,10 @@
     <artifactId>db-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>teaching_plan_platform</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
     
 </project>
