--- a/oauth-center/pom.xml
+++ b/oauth-center/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>oauth-center</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>teaching_plan_platform</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 </project>
