--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>api-gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
 
-    
+    <parent>
+        <groupId>com.springcloud</groupId>
+        <artifactId>teaching_plan_platform</artifactId>
+        <version>1.0-SNAPSHOT</version>
+    </parent>
 </project>
