--- a/business-center/pom.xml
+++ b/business-center/pom.xml
@@ -7,6 +7,7 @@
     <groupId>com.springcloud</groupId>
     <artifactId>business-center</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <packaging>pom</packaging>
 
     <parent>
         <groupId>com.springcloud</groupId>
