--- a/api-gateway/pom.xml
+++ b/api-gateway/pom.xml
@@ -8,5 +8,9 @@
     <artifactId>api-gateway</artifactId>
     <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
     
 </project>
