--- a/business-center/classroom-center/pom.xml
+++ b/business-center/classroom-center/pom.xml
@@ -14,4 +14,8 @@
         <version>1.0-SNAPSHOT</version>
     </parent>
 
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
+
 </project>
