--- a/business-center/course-center/pom.xml
+++ b/business-center/course-center/pom.xml
@@ -13,4 +13,8 @@
         <artifactId>business-center</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
+
+    <properties>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 </project>
