--- a/pom.xml
+++ b/pom.xml
@@ -29,29 +29,24 @@
     </modules>
 
     <properties>
-      <!--  <docker.host>http://59.110.164.254:5555</docker.host>
-        <docker.image.prefix>owenwangwen</docker.image.prefix>-->
 
+        <!--        <docker.host>http://59.110.164.254:5555</docker.host>-->
+        <!--        <docker.image.prefix>owenwangwen</docker.image.prefix>-->
+        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
         <java.version>1.8</java.version>
-        <core.version>2.0.1</core.version>
-        <log4j2.version>2.1</log4j2.version>
-        <jasypt.version>1.14</jasypt.version>
-        <hutool.version>4.1.13</hutool.version>
+        <lombok.version>1.18.4</lombok.version>
         <fastjson.version>1.2.60</fastjson.version>
-        <disruptor.version>3.4.1</disruptor.version>
         <maven.compiler.source>1.8</maven.compiler.source>
         <maven.compiler.target>1.8</maven.compiler.target>
-        <spring-boot.version>2.1.3.RELEASE</spring-boot.version>
-        <net-devh-grpc.version>2.0.1.RELEASE</net-devh-grpc.version>
-        <spring-platform.version>Cairo-SR3</spring-platform.version>
-        <spring.social.version>1.1.6.RELEASE</spring.social.version>
-        <spring-security.version>5.1.1.RELEASE</spring-security.version>
-        <security-oauth2.version>2.3.4.RELEASE</security-oauth2.version>
         <commons-collections4.version>4.1</commons-collections4.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-        <hibernate-validator.verion>5.0.2.Final</hibernate-validator.verion>
-        <flowable.version>6.4.1</flowable.version>
+
         <spring-cloud-dependencies.version>Greenwich.SR2</spring-cloud-dependencies.version>
+        <spring-security.version>5.1.1.RELEASE</spring-security.version>
+        <security-oauth2.version>2.3.4.RELEASE</security-oauth2.version>
+        <spring-platform.version>Cairo-SR3</spring-platform.version>
+        <eureka-client.version>2.1.2.RELEASE</eureka-client.version>
+        <eureka-server.version>1.4.6.RELEASE</eureka-server.version>
     </properties>
 
     <dependencies>
@@ -73,14 +68,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-actuator</artifactId>
         </dependency>
-
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
         </dependency>
-    </dependencies>
 
+    </dependencies>
     <dependencyManagement>
         <dependencies>
             <dependency>
@@ -90,7 +84,13 @@
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
-
+            <dependency>
+                <groupId>io.spring.platform</groupId>
+                <artifactId>platform-bom</artifactId>
+                <version>${spring-platform.version}</version>
+                <type>pom</type>
+                <scope>import</scope>
+            </dependency>
             <dependency>
                 <groupId>org.springframework.cloud</groupId>
                 <artifactId>spring-cloud-dependencies</artifactId>
@@ -104,29 +104,16 @@
                 <version>${security-oauth2.version}</version>
             </dependency>
 
-            <!-- 公共实体类模块 -->
             <dependency>
-                <groupId>com.open.capacity</groupId>
-                <artifactId>common-spring-boot-starter</artifactId>
-                <version>${core.version}</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
+                <version>${eureka-client.version}</version>
             </dependency>
-            <!-- 关系型和非关系型数据库配置 -->
+
             <dependency>
-                <groupId>com.open.capacity</groupId>
-                <artifactId>db-spring-boot-starter</artifactId>
-                <version>${core.version}</version>
-            </dependency>
-            <!-- 非关系型数据库配置 -->
-            <dependency>
-                <groupId>com.open.capacity</groupId>
-                <artifactId>redis-spring-boot-starter</artifactId>
-                <version>${core.version}</version>
-            </dependency>
-            <!-- 日志配置 -->
-            <dependency>
-                <groupId>com.open.capacity</groupId>
-                <artifactId>log-spring-boot-starter</artifactId>
-                <version>${core.version}</version>
+                <groupId>org.springframework.cloud</groupId>
+                <artifactId>spring-cloud-starter-netflix-eureka-server</artifactId>
+                <version>${eureka-server.version}</version>
             </dependency>
 
         </dependencies>
@@ -158,48 +145,7 @@
                 </plugin>
             </plugins>
         </pluginManagement>
-
-
-        <resources>
-            <resource>
-                <directory>src/main/resources</directory>
-                <includes>
-                    <include>**/*.properties</include>
-                    <include>**/*.yml</include>
-                    <include>**/*.xml</include>
-                    <include>**/*.tld</include>
-                    <include>**/*.p12</include>
-                    <include>**/*.conf</include>
-                    <include>**/*.txt</include>
-                    <include>**/*.wsdl</include>
-                    <include>**/*.xsd</include>
-                    <include>**/*.ftl</include>
-                    <include>**/*.lua</include>
-                    <include>**/*.json</include>
-                    <include>processes/*</include>
-                    <include>**/spring.factories</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-
-            <!--generatorConfig.xml生成实体以及dao目录-->
-            <resource>
-                <directory>src/main/view</directory>
-                <includes>
-                    <include>**/*.*</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-            <resource>
-                <directory>src/main/proto</directory>
-                <includes>
-                    <include>**/*.proto</include>
-                </includes>
-                <filtering>false</filtering>
-            </resource>
-        </resources>
     </build>
-
 
 
 </project>
