--- a/register-center/src/main/resources/application.yml
+++ b/register-center/src/main/resources/application.yml
@@ -1,6 +1,3 @@
-server:
-  port: 1000
-
 eureka:
   server:
     wait-time-in-ms-when-sync-empty: 0   #在eureka服务器获取不到集群里对等服务器上的实例时，需要等待的时间，单机默认0
@@ -11,7 +8,7 @@ eureka:
     response-cache-auto-expiration-in-seconds: 180   #eureka server缓存readWriteCacheMap失效时间，这个只有在这个时间过去后缓存才会失效，失效前不会更新，过期后从registry重新读取注册服务信息，registry是一个ConcurrentHashMap。
     renewal-percent-threshold: 0.49  #  指定每分钟需要收到的续约次数的阈值，默认值就是：0.85
   client:
-    register-with-eureka: true  #false:不作为一个客户端注册到注册中心,是否将自身的实例信息注册到eureka服务器  高可用
+    register-with-eureka: false  #false:不作为一个客户端注册到注册中心,是否将自身的实例信息注册到eureka服务器  高可用
     fetch-registry: false      #为true时，可以启动，但报异常：Cannot execute request on any known server ，是否从eureka服务端获取注册信息，消费者需要配置true
     instance-info-replication-interval-seconds: 2
     registry-fetch-interval-seconds: 30  #从eureka服务端获取注册信息的间隔时间
