--- a/crtvn-center/src/main/resources/application.yml
+++ b/crtvn-center/src/main/resources/application.yml
@@ -40,6 +40,12 @@ spring:
       hibernate:
         dialect: org.hibernate.dialect.MySQL5Dialect
         current_session_context_class: org.springframework.orm.hibernate5.SpringSessionContext
+server:
+  tomcat:
+    uri-encoding:UTF-8:
+http:
+  encoding:
+    charset:UTF-8:
 
 
   devtools:
