--- a/crtvn-center/src/main/resources/application.yml
+++ b/crtvn-center/src/main/resources/application.yml
@@ -27,7 +27,7 @@ spring:
     cache: false
     mode: LEGACYHTML5
   resources:
-    static-locations: classpath:/static/
+    static-locations: classpath:/META-INF/resources/,classpath:/resources/,classpath:/static/,classpath:/public/,classpath:/templates/
 
   jpa:
     database: MYSQL
