--- a/crtvn-center/src/main/resources/application.yml
+++ b/crtvn-center/src/main/resources/application.yml
@@ -47,10 +47,13 @@ http:
   encoding:
     charset:UTF-8:
 
-
   devtools:
     restart:
       enabled: true  #设置开启热部署
   freemarker:
     cache: false    #页面不加载缓存，修改即时生效
 debug: true
+
+ribbon:
+  eureka:
+    enabled: true
